가계부 기능 구현

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 .hidden {
     display: none;
 }
+#account-book {
+    table-layout: auto;
+    border: 1px solid #444444;
+    border-collapse: collapse;
+}
+th {
+    border: 1px solid #444444;
+    padding: 10px;
+    background-color: darkgray;
+}
+td {
+    border: 1px solid #444444;
+    padding: 10px;
+}
